--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
