--- a/app/safe-to-swim/package.json
+++ b/app/safe-to-swim/package.json
@@ -1,20 +1,23 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "private": true,
-  "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/samples": "2.1.1",
-    "expo": "^25.0.0",
-    "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-navigation": "^1.0.0-beta.27"
-  },
-  "devDependencies": {
-    "jest-expo": "^25.0.0"
-  }
+    "main": "node_modules/expo/AppEntry.js",
+    "private": true,
+    "scripts": {
+        "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    },
+    "jest": {
+        "preset": "jest-expo"
+    },
+    "dependencies": {
+        "@expo/samples": "2.1.1",
+        "expo": "^26.0.0",
+        "react": "16.3.0-alpha.1",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+        "react-native-is-iphonex": "^1.0.1",
+        "react-navigation": "^1.5.8",
+        "react-native-sentry": "^0.35.3",
+        "sentry-expo": "~1.7.0"
+    },
+    "devDependencies": {
+        "jest-expo": "^26.0.0"
+    }
 }
