--- a/app/safe-to-swim/package.json
+++ b/app/safe-to-swim/package.json
@@ -35,7 +35,9 @@
         "prop-types": "^15.6.1",
         "react": "16.3.0-alpha.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+        "react-native-image-picker": "^0.26.7",
         "react-native-is-iphonex": "^1.0.1",
+        "react-native-photo-upload": "^1.2.0",
         "react-native-sentry": "^0.35.3",
         "react-navigation": "^1.5.8",
         "react-navigation-redux-helpers": "^1.0.3",
