--- a/app/safe-to-swim/app.json
+++ b/app/safe-to-swim/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
         "name": "safe-to-swim",
-        "description": "A very interesting project.",
+        "description": "A better way to collect and analyze data on Harmful Algal Blooms",
         "slug": "safe-to-swim",
         "privacy": "public",
         "sdkVersion": "26.0.0",
